Several steps further

--- a/2024-03-11-thought-dissection.org
+++ b/2024-03-11-thought-dissection.org
@@ -241,252 +241,378 @@ left hemisphere.
 
 
 In brief the right hemisphere is in the service of understanding the
-contextual whole which is nothing less than the world and context
-changes everything the difference then is not as used to be supposed
-to do with what each hemisphere does as though it were some sort of a
-machine so much as the manner in which it does it as though it were
-part of a person the hemispheric difference in attention is beyond
-dispute indeed it is universally attested and since the nature of
-attention also indisputably changes what it is that comes to our
-attention such a difference logically cannot but lead to two different
-phenomenological worlds hence my belief that attention is a moral act
-it helps form both us and the world we come to know so what are these
-two worlds like very briefly if crudely these worlds could be
-characterized like this in the case of the left hemisphere the world
-is simplified in the service of manipulation it is made of isolated
-static things things moreover that are already known familiar
-predetermined and fixed they're fragments that are importantly devoid
-of context disembodied and meaningless abstract generic quantifiable
-fungible mechanical ultimately bloodless and lifeless this is indeed
-not so much a world as a representation of a world which means a world
-that's actually no longer present but reconstructed after the fact and
-it is literally two-dimensional schematic and theoretical not in fact
-a world at all more like a map nothing wrong with a map of course
-unless you mistake it for the world and here the future is a fantasy
-that remains under our control the left hemisphere is unreasonably
-optimistic and fails to see the dangers that loom in the case of the
-right Hemisphere by contrast is a world of flowing processes not
-isolated things one where nothing is simply fixed entirely certain
-exhaustively known or fully predictable but always changing and
-ultimately interconnected with everything else where context is
-everything where what exists are holes of which what we call the parts
-are an artifact of our way of attending where what really matters
-matters is implicit a world of uniqueness one where quality is more
-important than quantity a world that is essentially animate here the
-future is a product of realism not denial this is a world that is
-fully present rich and complex a world of experience which calls for
-understanding not the map all but the world that is mapped the
-emotional tambra here is more cautious and in general more realistic
-we need both of these worlds to work together but also independently
-hence the need for connection and separation naturally we are not
+contextual whole which is nothing less than the world. *And context
+changes everything*.
+
+The difference then is not as used to be supposed to do with what each
+hemisphere does as though it were some sort of a machine. So much as
+the manner in which it does it, as though it were part of a
+person.
+
+The hemispheric difference in attention is beyond dispute: indeed _it
+is universally attested_. And since the nature of attention also
+indisputably changes what it is that comes to our attention. Such a
+difference logically cannot but lead to two different phenomenological
+worlds.
+
+Hence, /my belief/ that:
+
+#+begin_quote
+attention is a moral act -- it helps form
+both us and the world we come to know
+#+end_quote
+
+So what are these two worlds like? Very briefly, if crudely these
+worlds could be characterized like this:
+
+* Left hemisphere's faculties
+
+- in the case of the left hemisphere -
+
+  the world is simplified in the service of manipulation:
+
+  it is made of =isolated static things=, things moreover that are
+  already known familiar predetermined and fixed.
+
+  They're fragments that are importantly
+
+
+#+begin_quote
+devoid of context disembodied and meaningless, abstract, generic,
+quantifiable, fungible, mechanical, ultimately bloodless and lifeless.
+#+end_quote
+
+This is indeed not so much a world as a /representation of a world/,
+which means a world that's actually no longer present, but
+/reconstructed after the fact/. And it is literally two-dimensional
+schematic and theoretical, not in fact a world at all, - ~more like a
+map~.
+
+Nothing wrong with a map of course unless you mistake it for the
+world. And here the future is a fantasy that remains under our
+control, - the left hemisphere is /unreasonably optimistic/ and fails
+to see the dangers that loom.
+
+
+* Right hemisphere's features
+
+- in the case of the right hemisphere -
+
+  by contrast is a world of flowing processes not isolated things:
+
+one where nothing is simply fixed, entirely certain, exhaustively
+known or fully predictable. But always changing and ultimately
+interconnected with everything else; where context is everything;
+where what exists are holes of which what we call the parts are an
+artifact of our way of attending; where what really matters matters is
+implicit.
+
+A world of uniqueness, one where quality is more important than
+quantity.
+
+A world that is essentially animate. Here the future is a
+product of realism not denial. This is a world that is fully present
+rich and complex, a world of experience which calls for understanding.
+
+
+/Not the map all/, but the world that is mapped the emotional tambra
+here is more cautious and in general more realistic.
+
+
+* Synthesis
+
+We need both of these worlds to work together, but also independently
+hence the need for connection and separation. Naturally we are not
 aware of this because these worlds are combined at a level below our
-awareness we become aware only after an accident of nature such as a
-stroke tumor or injury or after commissurotomy the so-called split
-brain operation or if one hemisphere at a time is experimentally
-suppressed then they may become suddenly vividly present to us yet
+awareness.
+
+We become aware only after an accident of nature such as a stroke,
+tumor or injury, or after commissurotomy the so-called split brain
+operation, or if one hemisphere at a time is experimentally
+suppressed - then they may become _suddenly vividly present_ to us. Yet
 because these two worlds have mutually incompatible properties when we
 come to reflect self-consciously and to rationalize about what we find
 we're forced by the requirement for consistency to choose between the
-pictures of the world they offer this is why as aan Whitehead one of
-my intellectual Heroes observed a culture is in its finest flower
-before it begins to analyze itself once our lives become very largely
-mediated by self-reflexive language and discourse as in our postmodern
-world they are the explicit stands forward and the implicit retires
-yet almost everything that really matters to us the beauty of nature
-poetry music art narrative drama myth ritual sex love the sense of the
-Sacred must remain implicit if we're not to destroy their nature the
-attempt to make the implicit explicit radically Alters its nature we
-can no longer rely on the wisdom that comes from these all important
-but hidden sources from closeness to the long tradition of a society
-to Nature and to the sacred to sophisticate our understanding in fact
-we see these not as Irreplaceable guides to truths deeper than those
-that science can Encompass but as lies possibly entertaining lies but
-lies nonetheless we begin to see only the self-created self-referring
-world according to the left hemisphere we go for the machine model
-reductive materialism and the consequences are all around us
-unfortunately the two hemispheres are not equally veridical in terms
+pictures of the world they offer.
+
+
+This is why Ian Whitehead, one of my intellectual heroes, observed a
+culture is in its finest flower before it begins to analyze itself
+once. Our lives become very largely mediated by self-reflexive language
+and discourse as in our postmodern world they are the explicit stands
+forward and the implicit retires.
+
+Yet almost everything that really matters to us: the beauty of nature,
+poetry, music, art, narrative, drama, myth, ritual, sex, love, the
+sense of the sacred must remain implicit if we're not to destroy their
+nature.
+
+The attempt to make the implicit explicit radically alters its nature:
+we can no longer rely on the wisdom that comes from these all
+important but hidden sources, from closeness to the long tradition of a
+society to Nature and to the sacred to sophisticate our understanding.
+
+In fact we see these not as Irreplaceable guides to truths deeper than
+those that science can Encompass but *as lies*, - possibly
+entertaining lies but lies nonetheless. We begin to see only the
+self-created self-referring world according to the left hemisphere. We
+go for the machine model reductive materialism and the consequences
+are all around us.
+
+* Discrepancies
+
+Unfortunately the two hemispheres are not equally veridical: in terms
 of our ability to apprehend take hold of and use the world the left
-hemisphere is superior but in terms of the ability to comprehend the
-world the right hemisphere is Superior in each of what one might call
-the portals of understanding attention perception judgment emotional
-and social intelligence cognitive intelligence that is IQ and
-creativity the right hemisphere is so much super Superior that the
-left hemisphere on its own has been repeatedly described as frankly
-delusional this is not a rhetorical expression denial of the facts and
+hemisphere is superior, but in terms of the ability to comprehend the
+world the right hemisphere is superior. In each of what one might call
+the portals of understanding, attention, perception, judgment,
+emotional and social intelligence, cognitive intelligence (that is IQ)
+and creativity the right hemisphere is so much superior that the left
+hemisphere on its own has been repeatedly described as /frankly
+delusional/.
+
+This is not a rhetorical expression: denial of the facts and
 delusional beliefs are far commoner in association with damage to the
-right Hemisphere and consequently dependence on the left hemisphere
-than the reverse on its own the left hemisphere confabulates makes up
-stories so to fit with its beliefs it will frankly insist that a
+right hemisphere and consequently dependence on the left hemisphere
+than the reverse. On its own the left hemisphere confabulates, makes
+up stories so to fit with its beliefs. It will frankly insist that a
 paralyzed limb is unaffected or if challenged deny that the offending
-appendage belongs to the subject at all belongs to you Doctor unlike
-the right hemisphere which sees more than one angle and has for this
-reason been called by vs ramachandran the Devil's Advocate the left
-hemisphere never doubts that it is right it is never wrong and never
-at fault someone else is always to blame furthermore in what I take to
-be the four important onward paths to truth science reason intuition
-and Imagination though both hemispheres contribute The crucial part in
-each case including in science and reason is played by the right
-hemisphere not the left our predicament is that we now live in a world
-where the understand the understanding of which is largely limited to
-that of the inferior left hemisphere some signs of this include our
-inability to see the broader picture both in space and in time the way
-in which wisdom has been lost understanding reduced to Mere knowledge
-a knowledge replaced by information token representations the loss of
-the concepts of skill and judgment which are the products of
-experience the divorce of mind and matter resulting in a strong
+appendage belongs to the subject at all: "Belongs to you Doctor".
+
+Unlike the right hemisphere which sees more than one angle and has for
+this reason been called by V.S. Ramachandran ~the Devil's
+Advocate~. The left hemisphere never doubts that it is right it is
+never wrong and never at fault - =someone else= is always to blame.
+
+
+Furthermore in what I take to be the four important onward paths to
+truth:
+
+ - science,
+   - reason,
+     - intuition and
+       -imagination
+
+though _both hemispheres contribute_. The crucial part in each case
+including in science and reason is played by the right hemisphere not
+the left.
+
+Our predicament is that we now live in a world where the understanding
+of which is largely limited to that of the inferior left hemisphere.
+Some signs of this include:
+
+- our inability to see the broader picture both in space and in time;
+- the way in which wisdom has been lost understanding reduced to mere
+knowledge a knowledge replaced by information, tokens,
+representations;
+- the loss of the concepts of skill in judgment which are the products
+of experience;
+- the divorce of mind and matter resulting in a strong
 tendency to simultaneous abstraction and the debasement of matter to
-Mere lump and matter there our exploitation an exponential growth of
-bureaucracy and administration everywhere the proceduralization of
-Life the reduction of justce Justice to Mere equality a loss of the
-sense of the uniqueness of all things the supplanting of quality by
-quantity the abandonment of nuance in favor of simplistic either or
-positions the loss of reasonableness which is replaced by
-rationalization a complete disregard for common sense the design of
-systems not for humans but to maximize utility a growth of paranoia
-and per vasive mistrust for if all is not under its control the left
-hemisphere becomes anxious and protects its anxiety outwards onto
-others nonetheless we play the passive victim and abjure
-responsibility for our own lives in addition I might point to the rise
-of anger and aggression in the public sphere the destruction of social
-cohesion and its replacement by Angry Waring factions like almost
-everything that you to be said about hemisphere differences the idea
-that the left hemisphere is unemotional is wrong the most highly
-lateralized emotion is anger and guess what it lateralizes to the left
-hemisphere and there are more indications but for today's purposes
-I'll stop here in the second part of the master and his Emissary I
-Trac the main turning points in the history of ideas in the west and
-concluded that three times we have seen enacted a certain pattern
-first there is a sudden efflorescence of everything that comes from
-the proper working together of the two hemispheres in harmony that
-then follows a stable period for a few hundred years at most and soon
-a decline after which the civilization eventually crumbles under its
-own weight I Trac this pattern beginning in the Greek world around the
-6th Century BC in the Roman world around the end of the Republic and
-the beginning of the empire and in the modern world with the
-Renaissance in each case it's apparent that the vitality and Harmony
-of a flourishing culture is lost as in due course it overreaches
-itself becomes less creative more and more sclerotic unimaginative
-over administered over hierarchical and power hungry there is a
-cooning of values where goodness Beauty and Truth had once been The
-Guiding value the need to control the value of power hold sway I'm
-sometimes asked why if the right hemisphere is more intelligent and by
-a long way more insightful than the left this progression is always
-leftwards it's a good question in brief there are a handful of reasons
-first and most obviously the left hemisphere is more is designed to
-Aid Us in grabbing stuff it controls the right hand with which most of
-us do the grabbing as such it is seductive not to say addictive second
-the left hemisphere view sees a very simplified schema of the world
-and offers simple answers to our questions it's mod of thinking prizes
-consistency above all and offers the same mechanistic model to explain
-everything that exists when reductionist thinking encounters a problem
-in reconciling apparent irreconcilables for example matter and
-Consciousness it simply denies that one element or the other exists
-that's very convenient third the left hemisphere's worldview is easier
-to articulate though language is shared between hemispheres speech is
-almost always confined to the left the right hemisphere has literally
-no voice and the map isofacto vastly simpler than the complex terrain
-that is mapped almost everything that really m matters cannot be found
-there or in the banality of discursive Pros fourth importantly there
-is or should be always an appeal from a theory back to the empirical
-evidence if you like the left hemisphere has a theoretical model the
-right hemisphere looks out of the window to see if the model
-corresponds with experience since the Industrial Revolution and
-particularly in the last 50 years we have created a world around us
-which in contrast to the Natural World reflects the left hemisphere's
-properties and its Vision what we see around us now looking out of the
-metaphorical window is rectilinear man-made utilitarian each thing
-ripped from the context in which it alone has meaning and for many the
-two-dimensional representations provided by TV screens and computers
-have come largely to supplant direct face-to-face experience of
-three-dimensional life in all its complexity fifth built into the
-relationship between the hemispheres is that they have a different
-take on everything including their own relationship essentially the
-right hemisphere tends to ground experience it knows that the left
-hemisphere has a valuable role though the left hemisphere then works
-on what it's offer to clarify unpack and generally render the implicit
-explicit and the right hemisphere finally re integrates what the left
-hemisphere's produce with its own understanding the explicit once more
-receding to produce a new now enriched home the left hemisphere's
-contribution then is valuable but must come at an intermediate stage
-problems arise when this is treated as it now often is as the end
-stage analysis is a valuable tool but breaking things down must be
-followed by an attempt to understand the whole once more unfortunately
-the left hemisphere is is unaware of what it is missing he doesn't
-know why the right hemisphere is important it cannot see the gestal
-the ultimately indivisible whole therefore it thinks it can go It
-Alone six a culture that exemplifies the qualities of the left
-hemisphere's World attracts to itself in positions of influence and
-Authority those whose natural Outlook is similar especially in the
-areas of science technology and administration which have an undue
-importance in shaping contemporary life they then make us more like
-themselves My worry is not that machines will become like people an
-impossibility but that people are already becoming more like machines
-finally I've already referred to the problem that a civilization that
+Mere lump and matter there our exploitation;
+- an exponential growth of bureaucracy and administration everywhere
+  the proceduralization of life;
+  - the reduction of justce Justice to Mere equality;
+    - a loss of the sense of the uniqueness of all things;
+      - the supplanting of quality by quantity;
+	- the abandonment of nuance in favor of simplistic either or
+          positions;
+	  - the loss of reasonableness which is replaced by rationalization;
+- a complete disregard for common sense;
+  - the design of systems not for humans, but to maximize utility;
+    - a growth of paranoia and pervasive mistrust for all is not under
+      its control.
+
+
+The left hemisphere becomes anxious and protects its anxiety outwards
+onto others. Nonetheless we play the passive victim and abjure
+responsibility for our own lives.
+
+In addition I might point to the rise of anger and aggression in the
+public sphere the destruction of social cohesion and its replacement
+by Angry Waring factions. Like almost everything that you to be said
+about hemisphere differences the idea that the left hemisphere is
+unemotional is wrong. The most highly lateralized emotion is anger and
+guess what it lateralizes to the left hemisphere(!)
+
+And there are more indications but for today's purposes I'll stop
+here.
+
+In the second part of 'The Master and His Emissary' I track the main
+turning points in the history of ideas in the west and concluded that
+three times we have seen enacted a certain pattern. First there is a
+sudden efflorescence of everything that comes from the proper working
+together of the two hemispheres in harmony. That then follows a stable
+period for a few hundred years at most and soon, - a decline after
+which the civilization eventually crumbles under its own weight.
+
+I track this pattern beginning in the Greek world around the 6th
+Century BC, in the Roman world around the end of the Republic and the
+beginning of the empire and in the modern world with the Renaissance.
+In each case it's apparent that the vitality and varmony of a
+flourishing culture is lost as in due course it overreaches itself
+becomes less creative more and more sclerotic, unimaginative,
+over-administered, over-hierarchical and power-hungry.
+
+There is a cooning of values where goodness Beauty and Truth had once
+been The Guiding value the need to control the value of power hold
+sway. I'm sometimes asked: _why if the right hemisphere is more_
+_intelligent and by a long way more insightful than the left this
+progression is always leftwards_. It's a good question.
+
+In brief there are a handful of reasons. =First= and most obviously the
+left hemisphere is designed to Aid Us in grabbing stuff, it controls
+the right hand with which most of us do the grabbing. As such, it is
+seductive, not to say addictive.
+
+=Second=: the left hemisphere view sees a very simplified schema of
+the world and offers simple answers to our questions. It's mod of
+thinking prizes consistency above all and offers the same mechanistic
+model to explain everything that exists.When reductionist thinking
+encounters a problem in reconciling apparent irreconcilables for
+example matter and consciousness - it simply denies that one element
+or the other exists that's very convenient.
+
+=Third=: the left hemisphere's worldview is easier to articulate,
+though language is shared between hemispheres speech is almost always
+confined to the left, the right hemisphere has literally no voice and
+the map isofacto vastly simpler than the complex terrain that is
+mapped. Almost everything that really matters cannot be found there
+or in the banality of discursive pros.
+
+
+=Fourth=: importantly there is or should be always an appeal from a
+theory back to the empirical evidence. If you like the left hemisphere
+has a theoretical model, the right hemisphere looks out of the window
+to see if the model corresponds with experience. Since the Industrial
+Revolution and particularly in the last 50 years we have created a
+world around us which in contrast to the Natural World reflects the
+left hemisphere's properties and its vision. What we see around us
+now, looking out of the metaphorical window is rectilinear man-made
+utilitarian: each thing ripped from the context in which it alone has
+meaning. And for many the two-dimensional representations provided by
+TV screens and computers have come largely to supplant direct
+face-to-face experience of three-dimensional life in all its
+complexity.
+
+=Fifth=: built into the relationship between the hemispheres is that
+they have a different take on everything including their own
+relationship. Essentially the right hemisphere tends to ground
+experience it knows that the left hemisphere has a valuable role
+though. The left hemisphere then works on what it's offer to clarify,
+unpack and generally render the implicit explicit and the right
+hemisphere finally re-integrates what the left hemisphere's produce
+with its own understanding: the explicit once more receding to produce
+a new now enriched home. The left hemisphere's contribution then is
+valuable but must come at an intermediate stage. Problems arise when
+this is treated as it now often is as the end stage, - analysis is a
+valuable tool, but breaking things down must be followed by an attempt
+to understand the whole once more.
+
+
+Unfortunately the left hemisphere is is unaware of what it is missing,
+he doesn't know why the right hemisphere is important, it cannot see
+_the gestal_, the ultimately indivisible whole. Therefore, - it thinks it
+can go it alone.
+
+=Sixth=: a culture that exemplifies the qualities of the left
+hemisphere's world attracts to itself in positions of influence and
+authority those whose natural outlook is similar especially in the
+areas of science technology and administration, which have an undue
+importance in shaping contemporary life. They then make us more like
+themselves.
+
+#+begin_quote
+My worry is not that machines will become like people an impossibility
+but that people are already becoming more like machines.
+#+end_quote
+
+Finally I've already referred to the problem that a civilization that
 is increasingly cut off from its intuitive life relies more heavily on
-Exchange of explicit ideas in the public forum here though Tru truth
-is manifestly complicated and many lad an awareness of inherent
-ambiguities and a capacity for seeing both sides of a question what
-happened to that is no longer considered a strength the right
+Exchange of explicit ideas in the public forum. Here though truth is
+manifestly complicated and many lad an awareness of inherent
+ambiguities and a capacity for seeing both sides of a question: "What
+happened to that?" is no longer considered a strength. The right
 hemisphere view is multifaceted and also already takes into account
-the left hemisphere's point of view this virtue makes it immediately
+the left hemisphere's point of view. This virtue makes it immediately
 vulnerable to the charge of inconsistency and it is therefore liable
-to be dismissed I believe it is the left hemispheric view of the world
-intellectually Dune and morally bankrupt as it is that has resulted in
-what has been called The Meta crisis not just the odd crisis here and
-there but the despoliation of the natural world the decline of species
-on a colossal scale the destabilization of the climate the destruction
-of the way of life of indigenous people the fragmentation and
-polarization of a once civiliz ized Society with escalating not
-diminishing resentments on all sides and escalating not diminishing
-gap between rich and poor a surge in mental illness not the promised
-increase in happiness a proliferation of laws but a rise in crime the
-abandonment of civil discourse a betrayal of standards in our major
-institutions government the BBC the police our h hospitals schools and
-universities once rightly admired all over the world which have all
-become vastly overweighted with bureaucracy inflexible and obsessed
-with enforcement of a world view that is in flat contradiction to
-reality and isn't their job to enforce and the looming manace of
-totalitarian control through AI these aspects of the so-called metac
-crisis have a multitude of proximal causes economic political social
-psychological technological and so on but beneath and beyond that each
-manifests within those Realms aspects of the left hemisphere's
-dysfunctional view of the world the very thing that originates the
-problem also militates against seeing the problem seeing the wider
-picture and necessarily Prelude to understanding is now increasingly
-disfavored and as a consequence the crises I've referred to are often
-seen as isolated pieces of bad luck but they're not they could have
-been and were by some predicted the metac crisis is the predictable
-outcome of a complete failure to understand what a human being is what
-the world is and what the one has to do with the other and all this is
-the sort of thing the right hemisphere is far better equipped to
-understand than the left the rightful Master the right hemisphere has
-been subjugated by his Emissary or servant the left in an entirely
-predictable parallel we have become enslaved by the machine that
-should be our servant as so many have predicted since the time of
-Gerta we cannot say we were not warned even physics now teaches us
-that the mechanical model of the universe is mistaken but because of
-our success in making machines we still imagine that the machine is
-the best model for understanding everything we come across we
-ourselves our brains and Minds our society and the living world are
-now supposed to be explained by the metaphor of the machine yet only
-the tiniest handful of things in the entire known universe are at all
-like a machine namely the machines we made in the last few hundred
-years machines unlike life and all complex systems whether animate or
-inanimate are linear and sequential are put together part by part from
-the ground up and can be switched on and off at will their default
-status is stasis not flow they are not resonantly embroiled with their
-environment they have precise boundaries their parts do not change
-structure and function as the whole changes and evolves not least
-because in the machine the whole does not evolve and they are
-utilitarian constructs in service of the power of their maker none of
-this applies to life nor does it to anything else in the universe the
-brilliant mathematician and biophysicist Robert Rosen in his book life
-itself demonstrates just how unlike machines organisms are he further
-argues that the best way to understand all naturally occurring systems
-which are never merely complicated but complex and therefore never
-fully predictable is as organisms whether we choose to see them as
-alive or not and that's before one gets to consider the neglect of our
-emotional moral and spiritual nature which is at the core of Being
+to be dismissed.
+
+
+I believe it is the left hemispheric view of the world intellectually
+deduned and morally bankrupt as it is. That has resulted in what has been
+called ~The Meta Crisis~: not just the odd crisis here and there, but:
+
+- the despoliation of the natural world;
+  - the decline of species on a colossal scale;
+    - the destabilization of the climate;
+      - the destruction of the way of life of indigenous people;
+	- the fragmentation and polarization of a once civilized society with escalating not diminishing resentments on all sides;
+	  - and escalating not diminishing gap between rich and poor.
+
+
+A surge in mental illness not the promised increase in happiness, a
+proliferation of laws but a rise in crime, the abandonment of civil
+discourse, a betrayal of standards in our major institutions;
+government, the BBC, the police, our hospitals, schools and universities
+once rightly admired all over the world, which have all become vastly
+overweighted with bureaucracy, inflexible and obsessed with enforcement
+of a world view that is in flat contradiction to reality and isn't
+their job to enforce.
+
+And the looming manace of totalitarian control through AI. These
+aspects of the so-called ~meta-crisis~ have a multitude of proximal
+causes: economic, political, social, psychological, technological and
+so on. But beneath and beyond that each manifests within those realms
+aspects of *the left hemisphere's dysfunctional view of the world*.
+
+The very thing that originates the problem also militates against
+seeing the problem: seeing the wider picture and necessarily prelude
+to understanding is now increasingly disfavored. And as a consequence
+the crises I've referred to are _often seen as isolated pieces of bad
+luck_, *but they're not*. They could have been and were by some
+predicted. The ~meta-crisis~ is the predictable outcome of a complete
+failure to understand what a human being is, what the world is and what
+the one has to do with the other.
+
+And all this is the sort of thing the right hemisphere is far better
+equipped to understand than the left.
+
+The rightful master - the right hemisphere has been subjugated by his
+emissary or servant - the left, in an entirely predictable parallel:
+we have become enslaved by the machine that should be our servant as
+so many have predicted since the time of Goethe. We cannot say we were
+not warned.
+
+
+Even physics now teaches us that the mechanical model of the universe
+is mistaken. But because of our success in making machines we still
+imagine that the machine is the best model for understanding
+everything. We come across we ourselves our brains and Minds our
+society and the living world are now supposed to be explained by the
+metaphor of the machine.
+
+Yet only the tiniest handful of things in the entire known universe
+are at all like a machine namely the machines we made in the last few
+hundred years. Machines unlike life and all complex systems whether
+animate or inanimate are linear and sequential are put together part
+by part from the ground up and can be switched on and off at will.
+
+Their default status is stasis not flow they are not resonantly
+embroiled with their environment, they have precise boundaries their,
+parts do not change structure and function as the whole changes and
+evolves not least because in the machine the whole does not
+evolve. And they are utilitarian constructs in service of the power of
+their maker. None of this applies to life, nor does it to anything
+else in the Universe.
+
+The brilliant mathematician and biophysicist Robert Rosen in his book
+life itself demonstrates just how unlike machines organisms are he
+further argues that the best way to understand all naturally occurring
+systems which are never merely complicated but complex and therefore
+never fully predictable is as organisms whether we choose to see them
+as alive or not and that's before one gets to consider the neglect of
+our emotional moral and spiritual nature which is at the core of Being
 Human we seem to have been seduced into thinking we understand
 everything and what's more can Master it and mold it like a machine so
 as to provide a future that will benefit mankind that this is a malign
